manifest/center-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\ELIE\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert -f .\docker-compose.yaml --out .
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: center
  name: center
spec:
  type: NodePort
  ports:
    - name: "http"
      port: 4000
      targetPort: 4000
      nodePort: 32767
  selector:
    io.kompose.service: center
status:
  loadBalancer: {}
