manifest/headquaters-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\ELIE\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert -f .\docker-compose.yaml --out .
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: headquaters
  name: headquaters
spec:
  type: NodePort
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
      nodePort: 30000
  selector:
    io.kompose.service: headquaters
status:
  loadBalancer: {}
